[package]
name = "SkidKit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.5", features = ["blocking", "json"] }
chrono = { version = "0.4.19", features = ["serde"] }
keylogger = { version = "0.1.2" }
